# linktimeplugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo-bird.cpp  demo-cat.cpp  demo-dog.cpp  demo-main.cpp  demo.hpp  linktimeplugin.hpp  main.cpp
